Completed a barebones, fully working verions

--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
     <script src="javascript.js" defer></script>
 </head>
 <body>  
+    <div class="Controls">
+        <div class="sizeControls">
+            <label class="sizeLabel">16 x 16</label>
+            <input type="range" min="4" max="100" value="16" class="slider">
+            <button class="apply">Apply</button>
+        </div>
+    </div>
     <div class="Grid"></div>
-   
+    
 </body>
 </html>
